--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gapi": "^0.0.3",
+    "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.5",
+    "react": "18.2.0",
+    "react-charts": "^2.0.0-beta.7",
+    "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.10.1",
+    "react-router": "6.2.0",
+    "react-router-dom": "6.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
